--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "^3.2.2",
     "react": "17.0.1",
@@ -18,7 +19,8 @@
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "weekday": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
