--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
     "weekday": "^3.0.1"
   },
   "devDependencies": {
